Add conditional rendering

--- a/views/partials/navbar.pug
+++ b/views/partials/navbar.pug
@@ -3,7 +3,13 @@ header
     ul
       li
         a(href="/") Home
-      li
-        a(href="/login") Sign In
-      li
-        a(href="/register") Sign Up
+      if user
+        li
+          a(href="/admin") Dashboard
+        li
+          a(href="/logout") Sign Out
+      else
+        li
+          a(href="/login") Sign In
+        li
+          a(href="/register") Sign Up
